--- a/build.gradle
+++ b/build.gradle
@@ -33,4 +33,8 @@ dependencies {
 
     compile "clojuresque:clojuresque-common:1.1.0"
     compile "de.kotka.gradle:gradle-utils:0.2.2"
+
+    testCompile("org.spockframework:spock-core:0.7-groovy-2.0") {
+        exclude group: "org.codehaus.groovy", module: "groovy-all"
+    }
 }
